--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity android:name="com.giftech.taskmastertest.ui.intro.Intro3Activity"></activity>
         <activity android:name="com.giftech.taskmastertest.ui.intro.Intro2Activity" />
         <activity android:name="com.giftech.taskmastertest.ui.intro.Intro1Activity" />
-        <activity android:name=".ui.SplashScreenActivity">
+        <activity android:name=".ui.splash.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
         </activity>
         <activity android:name=".ui.HistoryActivity" />
         <activity android:name="com.giftech.taskmastertest.ui.auth.signin.SignInActivity" />
-        <activity android:name="com.giftech.taskmastertest.ui.auth.SignUpActivity" />
+        <activity android:name="com.giftech.taskmastertest.ui.auth.signup.SignUpActivity" />
         <activity android:name=".ui.HomeActivity" />
         <activity android:name=".ExampleAppWidgetConfig">
             <intent-filter>
