--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.HistoryActivity" />
+        <activity android:name=".ui.history.HistoryActivity" />
         <activity android:name="com.giftech.taskmastertest.ui.auth.signin.SignInActivity" />
         <activity android:name="com.giftech.taskmastertest.ui.auth.signup.SignUpActivity" />
-        <activity android:name=".ui.HomeActivity" />
+        <activity android:name=".ui.home.HomeActivity" />
         <activity android:name=".ExampleAppWidgetConfig">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
