--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,17 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext{
+    //dependencies version
+    appCompatVersion = '1.2.0'
+    coreVersion = '1.3.2'
+    constraintLayoutVersion = '2.0.4'
+    junitVersion = '4.13.1'
+    junitExtversion = '1.1.2'
+    espressoVersion = '3.3.0'
+    androidTestVersion = '1.3.0'
+    androidCoreTestVersion = '2.1.0'
+    mockitoVersion = '3.6.0'
+    mockitoKotlinVersion = '2.2.0'
+}
